fix(08.2-01): fix PostgreSQL pooler service name in helper
- Update onyx-ai.postgresql.host to return correct CNPG pooler service name
- Pooler enabled: {release}-postgresql-cluster-pooler-rw
- Pooler disabled: {release}-postgresql-cluster-rw (unchanged)
- CNPG pooler creates service named {cluster}-pooler-{pooler-name}

fix(08.2-01): fix INTERNAL_URL and model server hosts in ConfigMap

- Change INTERNAL_URL to use .Release.Name directly
- Change MODEL_SERVER_HOST to use .Release.Name directly
- Change INDEXING_MODEL_SERVER_HOST to use .Release.Name directly
- Removes incorrect onyx-ai fullname prefix from service references

feat(08.2-01): add credential wiring documentation and validation

- Add onyx.auth.postgresql section to values.yaml with CNPG docs
- Add onyx.auth.redis section to values.yaml with HA/external docs
- Add postgresql.validateCredentials helper to _helpers.tpl
- Add redis.validateCredentials helper to _helpers.tpl
- Wire validation into onyx-env-configmap.yaml
- Validates CNPG mode requires onyx.auth.postgresql.existingSecret
- Validates HA Redis mode requires onyx.auth.redis.existingSecret
- Default OT Redis mode works without explicit credential config

--- a/charts/onyx-ai/templates/onyx-env-configmap.yaml
+++ b/charts/onyx-ai/templates/onyx-env-configmap.yaml
@@ -15,6 +15,8 @@ All Onyx pods read this via envFrom.configMapRef in their deployment specs.
 */}}
 {{- include "onyx-ai.objectStorage.validate" . }}
 {{- include "onyx-ai.redis.validate" . }}
+{{- include "onyx-ai.postgresql.validateCredentials" . }}
+{{- include "onyx-ai.redis.validateCredentials" . }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -28,7 +30,7 @@ data:
   # ============================================================================
   # Upstream Onyx values (replicated from upstream configmap.yaml)
   # ============================================================================
-  INTERNAL_URL: "http://{{ include "onyx-ai.fullname" . }}-onyx-api-service:{{ .Values.onyx.api.service.port | default 8080 }}"
+  INTERNAL_URL: "http://{{ .Release.Name }}-onyx-api-service:{{ .Values.onyx.api.service.port | default 8080 }}"
   {{- if .Values.onyx.vespa.enabled }}
   VESPA_HOST: {{ .Values.onyx.vespa.name | default "vespa" }}.{{ .Values.onyx.vespa.service.name | default "vespa" }}.{{ .Release.Namespace }}.svc.cluster.local
   {{- end }}
@@ -38,8 +40,8 @@ data:
   ENABLE_OPENSEARCH_INDEXING_FOR_ONYX: "true"
   ENABLE_OPENSEARCH_RETRIEVAL_FOR_ONYX: "false"
   {{- end }}
-  MODEL_SERVER_HOST: "{{ include "onyx-ai.fullname" . }}-onyx-inference-model-service"
-  INDEXING_MODEL_SERVER_HOST: "{{ include "onyx-ai.fullname" . }}-onyx-indexing-model-service"
+  MODEL_SERVER_HOST: "{{ .Release.Name }}-onyx-inference-model-service"
+  INDEXING_MODEL_SERVER_HOST: "{{ .Release.Name }}-onyx-indexing-model-service"
   {{- range $key, $value := .Values.onyx.configMap }}
   {{- if and (not (empty $value)) (not (hasPrefix "S3_" $key)) (ne $key "AWS_REGION_NAME") }}
   {{ $key }}: {{ $value | quote }}
