feat(08.4-01): add GarageFS subchart dependency to Chart.yaml
- Add garage-helm v0.2.1 from datahub-local repository
- Conditionally enabled via garage.enabled flag

--- a/charts/onyx-ai/Chart.yaml
+++ b/charts/onyx-ai/Chart.yaml
@@ -27,3 +27,7 @@ dependencies:
     repository: "https://cloudnative-pg.github.io/charts"
     condition: cnpg.enabled
     alias: postgresql-cluster
+  - name: garage
+    version: "0.2.1"
+    repository: "https://datahub-local.github.io/garage-helm"
+    condition: garage.enabled
